--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-services-related.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-services-related.scss
@@ -13,3 +13,18 @@
         // boxes styles in pages/archive-services.scss
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-boxes-services-related {
+        .section-subtitle {
+            font-size: 3rem;
+        }
+        .cta {
+            margin-top: 3rem;
+        }
+    }
+}
