--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
@@ -6,6 +6,10 @@
 .block-slider-video {
     background: $light-gray;
 
+    video {
+        display: block;
+    }
+
     .iconaAudio {
         display: none;
     }
