--- a/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
@@ -65,6 +65,7 @@
                     font-size: 2rem;
                     color: inherit;
                     border-bottom: 0.4rem solid transparent;
+                    outline: none;
                     transition:
                         padding 0.3s ease-in-out,
                         border-bottom-color 0.3s ease-in-out;
