--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-google-maps.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-google-maps.scss
@@ -3,9 +3,29 @@
  ******************************************************/
 
 .block-google-maps {
+    .container-fluid {
+        --bs-gutter-x: 0;
+
+        & > .row {
+            --bs-gutter-x: 0;
+        }
+    }
+
     iframe {
         display: block;
         width: 100%;
         height: 45rem;
+    }
+}
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-google-maps {
+        iframe {
+            height: 30rem;
+        }
     }
 }
