--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
@@ -33,3 +33,19 @@
 
     // boxes styles in pages/news.scss
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-news-section {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        text-align: center;
+
+        .titolo_pb {
+            margin-bottom: 4rem;
+        }
+    }
+}
