--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-section.scss
@@ -15,3 +15,23 @@
         }
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-text-section {
+        padding: 5rem 0 3rem;
+
+        .titolo_pb {
+            &.h1 {
+                margin-bottom: 3rem;
+            }
+
+            &.h2 {
+                margin-bottom: 2rem;
+            }
+        }
+    }
+}
