--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-carousel.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-carousel.scss
@@ -71,3 +71,39 @@
         }
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-text-side-carousel {
+        & > .container {
+            padding-top: 4rem;
+            padding-bottom: 5rem;
+        }
+
+        .titolo_pb {
+            margin-bottom: 2rem;
+        }
+
+        .wp-element-button {
+            margin-top: 1rem;
+        }
+
+        .block-carousel {
+            position: static;
+            width: 100%;
+            height: auto;
+            margin-top: 4rem;
+
+            .site-carousel {
+                .swiper-slide {
+                    .image {
+                        height: auto;
+                    }
+                }
+            }
+        }
+    }
+}
