--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-work-application.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-work-application.scss
@@ -107,3 +107,48 @@
         }
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-work-application {
+        padding: 5rem 0;
+
+        .show-forms-btn {
+            margin-top: 1rem;
+        }
+
+        .application-form-section {
+            padding-top: 2rem;
+
+            & > .section-subtitle {
+                padding-bottom: 2rem;
+            }
+
+            .no-cv-section {
+                padding-top: 2rem;
+                padding-bottom: 3rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .block-work-application {
+        .application-form-section {
+            .no-cv-section {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 1rem;
+            }
+        }
+
+        .application-modal {
+            .top {
+                margin-bottom: 2rem;
+            }
+        }
+    }
+}
