--- a/wp-content/themes/publiframework/assets/src/scss/components/_pagination.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_pagination.scss
@@ -54,3 +54,14 @@
         }
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .pagination {
+        margin-top: 5rem;
+        font-size: 1.6rem;
+    }
+}
