--- a/wp-content/themes/publiframework/assets/src/scss/pages/internals.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/internals.scss
@@ -10,28 +10,7 @@
         margin-bottom: 3rem;
     }
 
-    .wrap-content {
-        h2,
-        h3,
-        h4 {
-            color: $primary;
-        }
-
-        h2 {
-            font-size: 2.4rem;
-            margin-bottom: 2rem;
-        }
-
-        h3 {
-            font-size: 2rem;
-            margin-bottom: 1.5rem;
-        }
-
-        h4 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-        }
-    }
+    @include general-typography;
 }
 
 .page404 {
@@ -43,5 +22,20 @@
 
     .wp-element-button {
         margin-top: 3rem;
+    }
+}
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 767px) {
+    .block-internal-page {
+        padding-top: 5rem;
+        padding-bottom: 3rem;
+    }
+
+    .page404 {
+        padding: 7rem 0;
     }
 }
