--- a/wp-content/themes/publiframework/blocks/blocks/boxes-services-related.twig
+++ b/wp-content/themes/publiframework/blocks/blocks/boxes-services-related.twig
@@ -1,16 +1,16 @@
 {% if posts is not empty %}
     <div class="boxes-cat-servives">
-        <div class="d-flex flex-column flex-md-row justify-content-md-between gap-4">
+        <div class="d-md-flex flex-md-row justify-content-md-between gap-4">
             <div class="section-subtitle primary">{{ fields.titolo_cta_block_boxes_related_servizi }}</div>
-
+            
             <a class="cta" href="{{ servizi_url }}">
                 {{ fields.testo_cta_block_boxes_related_servizi }}
             </a>
         </div>
-
-        <div class="row g-md-3 wrap-boxes">
+        
+        <div class="row gy-3 g-md-3 wrap-boxes">
             {% for post in posts %}
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-4 col-lg-3">
                     <a class="box-services" href="{{ post.link }}">
                         <img class="image" src="{{ post.thumbnail.src|resize(420) }}"
                              alt="{{ post.title }}">
