add site scroll animations

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-banner-testo.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-banner-testo.scss
@@ -4,6 +4,7 @@
 
 .block-banner-testo {
     padding: 7rem 0;
+    overflow: hidden; // gsap animations
 
     .titolo_pb {
         margin-bottom: 4rem;
