--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-carousel.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-carousel.scss
@@ -3,6 +3,8 @@
  ******************************************************/
 
 .block-carousel {
+    overflow: hidden; // gsap animations
+
     & > .container-fluid {
         --bs-gutter-x: 0;
 
