--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-two-columns.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-two-columns.scss
@@ -4,6 +4,7 @@
 
 .block-two-columns {
     padding: 6rem 0;
+    overflow: hidden; // gsap animations
 
     .titolo_pb {
         margin-bottom: 4rem;
