--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
@@ -7,6 +7,7 @@
     padding-top: 8rem;
     padding-bottom: 8rem;
     background: #fff;
+    overflow: hidden; // gsap animations
 
     & > div {
         position: static;
@@ -22,6 +23,10 @@
         position: relative;
         z-index: 2;
         margin-bottom: 5rem;
+
+        &.h2 {
+            display: inline-block !important;
+        }
     }
 
     .news-section {
