--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-image.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-image.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     min-height: 62rem;
+    overflow: hidden; // gsap animations
 
     & > .container {
         position: static;
