--- a/wp-content/themes/publiframework/blocks/blocks/boxes-services-related.twig
+++ b/wp-content/themes/publiframework/blocks/blocks/boxes-services-related.twig
@@ -1,6 +1,6 @@
 {% if posts is not empty %}
     <div class="boxes-cat-servives">
-        <div class="d-md-flex flex-md-row justify-content-md-between gap-4">
+        <div class="top d-md-flex flex-md-row justify-content-md-between gap-4">
             <div class="section-subtitle primary">{{ fields.titolo_cta_block_boxes_related_servizi }}</div>
             
             <a class="cta" href="{{ servizi_url }}">
