--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-cat-services.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-cat-services.scss
@@ -22,11 +22,9 @@
             .wrap-image {
                 position: absolute;
                 inset: 0;
-                opacity: 0;
-                //translate: 0 100%;
-                //transition: translate 0.3s;
                 transition: opacity 0.3s;
 
+                // overlay
                 &::after {
                     content: '';
                     position: absolute;
