--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-with-boxes.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-with-boxes.scss
@@ -4,6 +4,7 @@
 
 .block-text-with-boxes {
     padding: 7rem 0 5rem;
+    overflow: hidden; // gsap animation
 
     .titolo_pb {
         margin-bottom: 6rem;
